--- a/y20/assets/css/styles.css
+++ b/y20/assets/css/styles.css
@@ -191,6 +191,10 @@ html[xmlns] .clearfix {
     color:#ddd;
 }
 
+#timeline .container h1{
+    text-shadow: 1px 1px 2px gold;
+}
+
 /* The loading screen */
 
 #timeline .feedback {
